# simple-blog-app

./: .gitignore  pyproject.toml
.github/workflows/: master_simple-blog-dev.yml
simple_blog_app/: main.py
